--- a/frontend/src/components/Navigation/ProfileButton.css
+++ b/frontend/src/components/Navigation/ProfileButton.css
@@ -1,14 +1,61 @@
+.profile-dropdown.hidden {
+  display: none;
+}
 
+.profile-dropdown {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  right: 30px;
+  background: white;
+  margin: 5px;
+  border: 1px solid #ccc;
+  list-style: none;
+  z-index: 100;
+  width: 250px;
+  height: auto;
+}
+.profile-dropdown li,
+.profile-dropdown li button {
+  max-width: 100%;
+  width: 100%;
+  background-color: white;
+  padding: 5px;
+}
+.profile-dropdown li button {
+  border: none;
+}
+.profile-dropdown li button:hover {
+  background-color: rgb(239, 235, 235);
+}
 
-.hidden {
-    display: none;
-  }
+.profile-btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 8px 15px;
+  border-radius: 30px;
+  background-color: transparent;
+  border: 1px solid rgb(199, 190, 190);
+}
+.user-Icon {
+  height: 30px;
+  width: 30px;
+  padding: 5px;
+}
 
-  .profile-dropdown {
-    position: absolute;
-    background: white;
-    padding: 10px;
-    border: 1px solid #ccc;
-    list-style: none;
-    z-index: 100;
-  }
+.user-Letter{
+    font-size: 30px;
+    height: 30px;
+    width: 30px;
+    padding: 5px;
+    color: blue;
+    
+}
+
+.profile-hamburger {
+  height: 30px;
+  width: 30px;
+  padding: 5px;
+  color: grey;
+}
