--- a/frontend/src/components/Navigation/ProfileButton.css
+++ b/frontend/src/components/Navigation/ProfileButton.css
@@ -12,8 +12,10 @@
   border: 1px solid #ccc;
   list-style: none;
   z-index: 100;
+  top: 70px;
   width: 250px;
   height: auto;
+  border: 1px solid black;
 }
 .profile-dropdown li,
 .profile-dropdown li button {
@@ -30,6 +32,7 @@
 }
 
 .profile-btn {
+  position: relative;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -44,13 +47,12 @@
   padding: 5px;
 }
 
-.user-Letter{
-    font-size: 30px;
-    height: 30px;
-    width: 30px;
-    padding: 5px;
-    color: blue;
-    
+.user-Letter {
+  font-size: 30px;
+  height: 30px;
+  width: 30px;
+  padding: 5px;
+  color: blue;
 }
 
 .profile-hamburger {
