--- a/frontend/src/components/SpotPage/SpotPage.css
+++ b/frontend/src/components/SpotPage/SpotPage.css
@@ -1,7 +1,27 @@
-.spot-header{
-    display: flex;
-    align-items: center;
-    justify-content: space-between; 
-    margin: 1vh 10%;
-    padding: 0 80px;
+.spot-header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin: 1vh 10%;
+  padding: 0 80px;
+}
+
+.spotpage-main-div {
+  display: flex;
+  margin: 1vh 10%;
+  padding: 0 80px;
+}
+.reserve-btn-box {
+  display: flex;
+  flex: 1;
+  position: sticky;
+  top: 80px;
+  padding: 40px;
+  margin: 40px 0 auto 70px;
+  flex-direction: column;
+  background-color: rgb(252, 252, 252);
+  border-radius: 15px;
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+  width: 200px;
+  min-width: 200px;
 }
