--- a/frontend/src/components/reviews/SpotReviews.css
+++ b/frontend/src/components/reviews/SpotReviews.css
@@ -1,13 +1,32 @@
 .spotReviews {
-    max-width: 800px;
-    margin: 2rem auto;
-    padding: 1.5rem;
-    border: 1px solid #ddd;
     border-radius: 10px;
-    background-color: #fafafa;
     font-family: Arial, sans-serif;
+    
   }
   
+  .review-btn{
+    background-color: #f1469c;
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.4);
+  }
+
+  .review-btn:hover{
+    background-color: #a60857;
+  color: rgb(133, 112, 236);
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.4);
+ 
+ 
+  }
+
+
   .spotReviews ul {
     list-style: none;
     padding: 0;
