--- a/frontend/src/context/modal.css
+++ b/frontend/src/context/modal.css
@@ -1,4 +1,5 @@
 #modal {
+
     position: fixed;
     top: 0;
     right: 0;
@@ -20,5 +21,5 @@
   
   #modal-content {
     position: absolute;
-    background-color: white;
+    background-color: transparent;
   }
