--- a/frontend/src/components/SpotGrid/SpotCard.css
+++ b/frontend/src/components/SpotGrid/SpotCard.css
@@ -22,8 +22,23 @@
 
 }
 
+.location-star-rating-div{
+  display: flex;
+  justify-content: space-between;
+}
 .spotInfo{
     color: black;
     text-decoration: none;
     
+}
+
+.star-rating{
+  display: flex;
+}
+
+.star-rating img{
+  display: flex;
+  height: 18px;
+  width: 18px;
+  padding: 0 3px;
 }
