--- a/frontend/src/components/reviews/SpotReviews.css
+++ b/frontend/src/components/reviews/SpotReviews.css
@@ -4,6 +4,7 @@
     
   }
   
+
   .review-btn{
     background-color: #f1469c;
   color: white;
@@ -26,6 +27,19 @@
  
   }
 
+  .review-count-div{
+    display: flex;
+    padding: 20px 0;
+  }
+
+
+  #rating-dot {
+    width: 10px;
+    height: 10px;
+   align-self: center;
+   padding-left: 10px;
+   padding-right: 10px;
+  }
 
   .spotReviews ul {
     list-style: none;
@@ -50,40 +64,13 @@
     color: #555;
   }
   
-  .reserve-btn-box {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    border-top: 1px solid #ccc;
-    padding-top: 1rem;
-    margin-top: 2rem;
-  }
+
   
-  .price {
-    font-size: 1.4rem;
-    font-weight: bold;
-    color: #222;
-    margin: 0;
-  }
+
   
-  .reserve-btn-box h4 {
-    margin: 0.3rem 0 0;
-    font-size: 0.9rem;
-    color: #888;
-  }
+
   
-  .reserve-btn-box button {
-    background-color: #ff5a5f;
-    color: white;
-    padding: 0.6rem 1.2rem;
-    border: none;
-    border-radius: 6px;
-    font-size: 1rem;
-    cursor: pointer;
-    transition: background-color 0.2s ease;
-  }
+
   
-  .reserve-btn-box button:hover {
-    background-color: #e0484d;
-  }
-  
+
+   
