--- a/frontend/src/components/SpotPage/SpotPage.css
+++ b/frontend/src/components/SpotPage/SpotPage.css
@@ -5,6 +5,9 @@
   margin: 1vh 10%;
   padding: 0 80px;
 }
+.spot-name{
+    margin: 3vh 14%;
+}
 .spot-description{
     padding-top: 20px;
     overflow-wrap: break-word;
