--- a/frontend/src/components/SpotPage/SpotPage.css
+++ b/frontend/src/components/SpotPage/SpotPage.css
@@ -48,6 +48,7 @@
   flex-direction: column;
   top: 80px;
   padding: 30px;
+  padding-bottom: 60px;
   /* margin: 40px 0 auto 20vw; */
   margin-top: 40px;
   margin-left: auto;
