--- a/frontend/src/components/SpotPage/SpotImages.css
+++ b/frontend/src/components/SpotPage/SpotImages.css
@@ -1,3 +1,12 @@
+
+.grid-image,
+.grid-image-large {
+  width: 100%;
+  height: 100%;
+  max-height: 100%;
+  display: block;
+  box-sizing: border-box;
+}
 .images-grid{
     display: grid;
     grid-template-columns: repeat(4, 1fr);
@@ -5,13 +14,13 @@
     margin: 1vh 10%;
     padding: 0 80px;
     gap: 5px;
+    height: 300px;
+    max-height: 300px; 
+    overflow: hidden !important;
 
 }
 
-.grid-image{
-    width: 100%;
-  height: 100%;
-}
+
 
 .grid-image-large{
     height: 100%;
