--- a/frontend/src/components/Navigation/ProfileButton.css
+++ b/frontend/src/components/Navigation/ProfileButton.css
@@ -17,6 +17,7 @@
   gap: 2px;
   padding: 15px;
   border-radius: 10px;
+  z-index: 1;
  
 }
 
@@ -68,7 +69,8 @@
   font-size: 30px;
   height: 30px;
   width: 30px;
-  padding: 5px;
+  padding: 0 5px;
+  margin: auto;
   color: blue;
 }
 
