--- a/frontend/src/components/SpotGrid/SpotGrid.css
+++ b/frontend/src/components/SpotGrid/SpotGrid.css
@@ -5,9 +5,13 @@
 
   .spotGrid {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    gap:30px;
-    padding: 2rem;
-    margin:2vh 2vh ;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    column-gap: 35px;
+    row-gap: 60px;
+    padding: 5rem;
+    margin: 200px 2vh 2vh 2vh;
+    height: 100%;
+    justify-content: center;
   }
 
+ 
