--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -7,20 +7,20 @@
   border: 1px solid #ddd;
   box-shadow: 0 0 20px rgba(88, 59, 235, 0.15);
   top: 0;
-  background-color: white;
+  background-color:#E0E0E0 ;
 }
 
 .home-btn {
   font-size: 28px;
   font-weight: 700;
-  color: #ff385c;
+  color: #0077B6;
   text-decoration: none;
   letter-spacing: 1.2px;
   transition: color 0.3s ease;
 }
 
 .home-btn:hover {
-  color: #e31c5f;
+ 
   cursor: pointer;
   animation: shake 0.5s ease-in-out forwards;
 }
@@ -35,14 +35,14 @@
   font-size: 15px;
   background-color: transparent;
   padding: 5px;
-  color: #5d5b5b;
-  border-radius: 10px;
-  box-shadow: 0 2px 5px rgba(172, 165, 166, 0.4);
-  transition: box-shadow 0.3s ease;
+  color:#0077B6 ;
+
+ 
 }
 
 .create-listing-btn:hover {
-  background-color: #ddd;
+  color:#005F87;
+  text-decoration: underline;
   cursor: pointer;
 }
 .create-listing-btn:active {
@@ -58,7 +58,6 @@
   align-items: flex-start;
   height: 200px;
   padding: 1.5rem;
-  background-color: #fafafa;
   box-shadow: none;
   transition: height 0.2s ease, padding 0.3s ease;
 }
