--- a/frontend/src/components/Navigation/ProfileButton.css
+++ b/frontend/src/components/Navigation/ProfileButton.css
@@ -6,43 +6,54 @@
   position: absolute;
   display: flex;
   flex-direction: column;
-  background-color: rgb(38, 79, 213);
+  background-color: white;
   right: 40px;
   margin: 10px;
   top: 70px;
-  width: 200px;
+  width: 280px;
   height: auto;
-  border: 1px solid black;
-  align-items: center;
+  border: none;
+  align-items: stretch;
   gap: 2px;
-  padding: 15px;
+  padding: 20px 25px; /* more padding */
   border-radius: 10px;
   z-index: 1;
- 
 }
 
-.manage-link{
-  text-decoration: underline;
+.profile-dropdown li {
+  color: #333333;
+  list-style: none;
+  padding-left: 0;
 }
-.profile-dropdown li{
-  color: rgb(210, 210, 234);
+.profile-dropdown .user-name {
+  font-size: 20px;
+  font-style: italic;
+  font-weight: 900;
 }
 
-.profile-dropdown li,
-.profile-dropdown li button {
+.profile-dropdown li {
   max-width: 100%;
   width: 100%;
-  border-radius: 10px;
-  padding: 5px;
-
-
+  margin: 0.5rem 0;
 }
+.manage-link {
+  text-decoration: underline;
+  color: #333333;
+}
+
 .profile-dropdown li button {
+  display: block;
+  margin: 0.5rem auto;
   border: none;
-  color: black;
+  color: white;
+  padding: 10px;
+  width: 60%;
+  background-color: #0077b6;
+  border-radius: 8px;
+  
 }
 .profile-dropdown li button:hover {
-  background-color: rgb(239, 235, 235);
+  background-color: #005f87;
 }
 
 .profile-btn {
@@ -50,28 +61,32 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 8px 15px;
+  padding: 6px 12px;
   border-radius: 30px;
-  background-color: transparent;
+  background-color: #fffdf4;
   border: 1px solid rgb(199, 190, 190);
 }
+.profile-btn:hover {
+  background-color: #f9f5f0;
+}
+
 .user-Icon {
   height: 30px;
   width: 30px;
   padding: 5px;
 }
-.demo-btn{
+.demo-btn {
   background-color: transparent;
-  
 }
 
 .user-Letter {
   font-size: 30px;
+
   height: 30px;
   width: 30px;
   padding: 0 5px;
   margin: auto;
-  color: blue;
+  color: #d4af37;
 }
 
 .profile-hamburger {
