--- a/frontend/src/components/SpotGrid/SpotGrid.css
+++ b/frontend/src/components/SpotGrid/SpotGrid.css
@@ -5,6 +5,7 @@
 
   .spotGrid {
     display: grid;
+    background-color: #F7F7F8 ;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     column-gap: 35px;
     row-gap: 60px;
