--- a/frontend/src/components/SpotPage/SpotPage.css
+++ b/frontend/src/components/SpotPage/SpotPage.css
@@ -3,6 +3,7 @@
   margin: 0 auto;
   padding: 0 24px;
   box-sizing: border-box;
+  background-color:#F7F7F8 ;
 }
 .spot-header {
   display: flex;
@@ -53,6 +54,7 @@
   display: flex;
   margin-bottom: 3rem;
   gap: 2rem;
+  background-color: #F7F7F8;
 }
 .spotpage-main-div > div:first-child {
   flex: 2;
@@ -95,12 +97,13 @@
   max-width: 1120px;
   margin: 0 auto;
   padding: 0 24px;
+  min-height: 500px;
 }
 
 .reserve-btn {
   width: 100%;
   padding: 12px;
-  background-color: #ff385c;
+  background-color:#0077B6;
   color: white;
   font-weight: bold;
   font-size: 16px;
@@ -112,5 +115,5 @@
 }
 
 .reserve-btn:hover {
-  background-color: #e31c5f;
+  background-color: #005F87;
 }
