--- a/frontend/src/components/reviews/SpotReviews.css
+++ b/frontend/src/components/reviews/SpotReviews.css
@@ -4,6 +4,7 @@
   max-width: 1120px;
   margin: 0 auto;
   padding: 0 24px;
+  background-color: #F7F7F8;
 }
 
 #review-title {
@@ -34,9 +35,10 @@
   margin-right: 3px;
 }
 .review-btn {
-  background-color: #d8dae7;
-  color: rgb(37, 28, 28);
+  background-color: #0077B6;
+  color: #FFFFFF;
   padding: 10px 18px;
+  
   margin-bottom: 1.5rem;
   border: none;
   border-radius: 8px;
@@ -47,7 +49,7 @@
   
 }
 .review-btn:hover {
-  background-color: #c4c5ca;
+  background-color: #005F87;
 }
 .review-header-section {
   display: flex;
@@ -70,7 +72,7 @@
 
 .review-card {
   border-radius: 5px;
-  background-color: #f3efef;
+  background-color: #f1eeee;
   box-shadow: 0 1px 4px rgba(0, 0, 0, 0.05);
   margin-bottom: 1.25rem;
   padding: 1rem;
@@ -121,4 +123,14 @@
 
 .delete-btn:hover {
   background-color: #a50e1d;
+}
+
+.first-review-text{
+    width: 100%;
+    display: flex;
+
+}
+
+.first-review-text p{
+    margin: 1rem auto;
 }
