--- a/frontend/src/components/LoginFormModal/LoginForm.css
+++ b/frontend/src/components/LoginFormModal/LoginForm.css
@@ -1,6 +1,4 @@
-
-
-.loginForm{
+.loginForm {
     align-self: center;
     justify-self: center;
     display: flex;
@@ -10,15 +8,44 @@
     padding: 40px;
     border-radius: 20px;
     border: 1px solid black;
-    width: auto;
-    height: 100%;
+    width: 110%;
     background-color: white;
-}
-.loginForm input,
-.loginForm button {
-    width: 100%;         
-    padding: 10px;       
-    font-size: 1rem;      
-    box-sizing: border-box; 
-    margin: 10px;
   }
+  .login-back-btn {
+    background-color: transparent;
+    height: 60px;
+    width: 60px;
+    border: none;
+    margin-right: 83%;
+  }
+  
+  .exit-modal {
+    height: 25px;
+    width: 25px;
+  }
+  
+  .loginForm label {
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+    margin-bottom: 10px;
+    width: 350px;
+  }
+  
+  .loginForm input,
+  .login-btn {
+    width: 100%;
+    padding: 10px;
+    font-size: 1rem;
+    box-sizing: border-box;
+    margin: 10px 0;
+  }
+  
+  .login-btn {
+    width: 350px;
+  }
+  
+  .loginForm p {
+    width: 350px;
+  }
+  
