--- a/frontend/src/components/SpotGrid/SpotGrid.css
+++ b/frontend/src/components/SpotGrid/SpotGrid.css
@@ -5,14 +5,22 @@
 
   .spotGrid {
     display: grid;
-    background-color: #F7F7F8 ;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    background-color: #F7F7F8;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 300px));
     column-gap: 35px;
     row-gap: 60px;
-    padding: 5rem;
-    margin: 200px 2vh 2vh 2vh;
+    padding: 3rem 30px;
     height: 100%;
     justify-content: center;
+    place-items: center;
+  }
+  
+  .home-margin {
+    margin: 200px 1vh 2vh 1vh;
+  }
+  
+  .default-margin {
+    margin: 80px 1vh 2vh 1vh; /* or whatever smaller margin you want for other pages */
   }
 
  
