--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -50,6 +50,12 @@ h1 {
   font-size: 2em;
   margin: 0.67em 0;
 }
+h1, h2, h3, h4, h5{
+    color: #333333;
+}
+p{
+    color: #555555;
+}
 
 /* Grouping content
      ========================================================================== */
@@ -197,6 +203,7 @@ button,
 select {
   /* 1 */
   text-transform: none;
+  cursor: pointer;
 }
 
 /**
