--- a/frontend/src/components/LoginFormModal/LoginForm.css
+++ b/frontend/src/components/LoginFormModal/LoginForm.css
@@ -1,51 +1,56 @@
 .loginForm {
-    align-self: center;
-    justify-self: center;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    padding: 40px;
-    border-radius: 20px;
-    border: 1px solid black;
-    width: 110%;
-    background-color: white;
-  }
-  .login-back-btn {
-    background-color: transparent;
-    height: 60px;
-    width: 60px;
-    border: none;
-    margin-right: 83%;
-  }
-  
-  .exit-modal {
-    height: 25px;
-    width: 25px;
-  }
-  
-  .loginForm label {
-    display: flex;
-    flex-direction: column;
-    text-align: left;
-    margin-bottom: 10px;
-    width: 350px;
-  }
-  
-  .loginForm input,
-  .login-btn {
-    width: 100%;
-    padding: 10px;
-    font-size: 1rem;
-    box-sizing: border-box;
-    margin: 10px 0;
-  }
-  
-  .login-btn {
-    width: 350px;
-  }
-  
-  .loginForm p {
-    width: 350px;
-  }
-  
+  align-self: center;
+  justify-self: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 40px;
+  border-radius: 20px;
+  border: 1px solid black;
+  width: 110%;
+  background-color: white;
+}
+.login-back-btn {
+  background-color: transparent;
+  height: 60px;
+  width: 60px;
+  border: none;
+  margin-right: 83%;
+}
+
+.exit-modal {
+  height: 25px;
+  width: 25px;
+}
+
+.loginForm label {
+  display: flex;
+  flex-direction: column;
+  text-align: left;
+  margin-bottom: 10px;
+  width: 350px;
+}
+
+.loginForm input,
+.login-btn {
+  width: 100%;
+  padding: 10px;
+  font-size: 1rem;
+  box-sizing: border-box;
+  margin: 10px 0;
+}
+
+.login-btn {
+  width: 350px;
+  background-color: #0077b6;
+  color: white;
+  border-radius: 8px;
+}
+.login-btn:hover {
+  background-color: #005f87;
+}
+
+.loginForm p {
+  width: 350px;
+}
